--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
   "dependencies": {
     "autobind-decorator": "^2.4.0",
     "aws-sdk": "^2.1277.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "serverless": "^3.25.1",
     "serverless-http": "^3.1.0",
@@ -39,9 +41,11 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.16",
     "@types/serverless": "^3.12.9",
